# kimiflux

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  setup-rust.bat  vite.config.ts
.pi/skills/update-changelog/: update.cjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: ArticleList.tsx  ArticleView.tsx  SettingsModal.tsx  Sidebar.tsx  ThemeSettings.tsx
src/hooks/: useFavicon.tsx  useTheme.tsx
src/services/: favicon.ts  miniflux.ts
src/themes/: catppuccin.ts
src/types/: miniflux.ts
